--- a/src/mention.html
+++ b/src/mention.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="mentions-card-desc">
                     <h2>Noa Pascal</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti reprehenderit nisi voluptates perspiciatis hic alias fuga, consectetur magni aliquid quidem. Eos nisi praesentium vel dicta, architecto non minima sint sed officiis at impedit iure, exercitationem corrupti labore incidunt, minus libero. Velit consequatur cupiditate non, repellendus molestias fugiat quia veritatis.</p>
+                    <p>Étudiant en informatique, spécialisé en C++, je suis passionné par le développement informatique et toujours en quête de nouvelles expériences professionnalisantes. Ouvert à divers domaines, je suis prêt à m'investir dans tout type de projet, que ce soit en C++, Python, Web ou autres technologies. Je m'intéresse particulièrement aux métiers de data scientist et du jeu vidéo.</p>
                 </div>
             </div>
         </section>
