--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,7 @@
             <header>
                 <h1 id="title-rcn">À propos de nous</h1>
             </header>
-            <a href="#" class="studio-button">Réserver</a>
+            <a href="#contact" class="studio-button">Prendre contact</a>
         </section>
 
         <article>
