--- a/src/mention.html
+++ b/src/mention.html
@@ -35,36 +35,20 @@
 
     <main>
         <section class="mentions-section">
-
             <div class="mentions-card">
                 <div class="mentions-card-head">
-                    <img src="../res/profile.webp" alt="">
-                    <div class="mentions-card-info">
-                        <span>Propriétaire du studio</span>
-                        <span>Entrepreneur</span>
-                        <span><a href="#">LinkedIn</a></span>
-                        <span><a href="#">Portfolio</a></span>
-                    </div>
-                </div>
-                <div class="mentions-card-desc">
-                    <h2>Pierre Boucherit</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti reprehenderit nisi voluptates perspiciatis hic alias fuga, consectetur magni aliquid quidem. Eos nisi praesentium vel dicta, architecto non minima sint sed officiis at impedit iure, exercitationem corrupti labore incidunt, minus libero. Velit consequatur cupiditate non, repellendus molestias fugiat quia veritatis.</p>
-                </div>
-            </div>
-
-            <div class="mentions-card">
-                <div class="mentions-card-head">
-                    <img src="../res/profile.webp" alt="">
+                    <img src="../res/pp-cosme.jpg" alt="">
                     <div class="mentions-card-info">
                         <span>Responsable du Web design</span>
                         <span>Étudiant</span>
-                        <span><a href="#">LinkedIn</a></span>
-                        <span><a href="#">Portfolio</a></span>
+                        <span><a href="https://www.linkedin.com/in/cosme-pernot-a86997222/">LinkedIn</a></span>
                     </div>
                 </div>
                 <div class="mentions-card-desc">
                     <h2>Cosme Pernot</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti reprehenderit nisi voluptates perspiciatis hic alias fuga, consectetur magni aliquid quidem. Eos nisi praesentium vel dicta, architecto non minima sint sed officiis at impedit iure, exercitationem corrupti labore incidunt, minus libero. Velit consequatur cupiditate non, repellendus molestias fugiat quia veritatis.</p>
+                    <p>Étudiant à l'IAE Lyon, je suis fortement intéressé par les rouages du management. Avec une approche innovante et un engagement sans faille, je m'efforce de combiner créativité et pragmatisme pour relever les défis de demain se présentant à moi. 
+                        Actuellement à la recherche de nouvelles opportunités, afin de mettre mes compétences en pratique et pouvoir contribuer de manière significative à des projets stimulants, je suis ouvert aux rencontres et prêt à relever de nouveaux défis professionnels.
+                    </p>
                 </div>
             </div>
 
