--- a/src/services.html
+++ b/src/services.html
@@ -90,7 +90,7 @@
                         <p><span>110€</span> 1 heure + 1 mix</p>    
                         <p><span>140€</span> 2 heure + 1 mix</p>
                     </div>
-                    <a href="#">Réserver</a>
+                    <a href="#contact">Réserver</a>
                 </div>
 
                 <div class="prix-card">
@@ -106,7 +106,7 @@
                         <p>Pour un projet entier, veuillez contacter le studio</p>
                         <span></span>
                     </div>
-                    <a href="#">Réserver</a>
+                    <a href="#contact">Réserver</a>
                 </div>
 
                 <div class="prix-card">
@@ -122,7 +122,7 @@
                         <p>Pour un projet entier, veuillez contacter le studio</p>
                         <span></span>
                     </div>
-                    <a href="#">Réserver</a>
+                    <a href="#contact">Réserver</a>
                 </div>
             </section>
              
