--- a/src/studio.html
+++ b/src/studio.html
@@ -43,7 +43,7 @@
                 <p>Plongez dans l'ambiance unique de notre studio, où chaque espace a été pensé pour la création : une cabine d'enregistrement confortable et parfaitement insonorisée ainsi qu'un espace détente convivial pour accueillir vos sessions dans les meilleures conditions. Le tout est complété par un équipement audio haut de gamme, garantissant une qualité sonore professionnelle à chaque étape de votre projet.</p>
             </article>
 
-            <a href="#" class="studio-button">Réserver</a>
+            <a href="#contact" class="studio-button">Réserver</a>
         </section>
 
         <section>
@@ -129,12 +129,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            
-            <div class="studio-button-bis">
-                <a href="#" class="studio-button">Réserver</a>
-            </div>
-            
+            </div>       
         </section>       
     </main>
 
