--- a/src/services.html
+++ b/src/services.html
@@ -106,7 +106,7 @@
                         <p>Pour un projet entier, veuillez contacter le studio</p>
                         <span></span>
                     </div>
-                    <a href="#contact">Réserver</a>
+                    <a href="#contact">Prendre contact</a>
                 </div>
 
                 <div class="prix-card">
