--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <li><a href="./src/services.html#home" aria-label="Voir nos services">Nos services</a></li>
             <li><a href="./src/services.html#tarif" aria-label="Voir les tarifs">Tarifs</a></li>
             <li><a href="./src/about.html">À propos</a></li>
-            <li><a href="#">Mentions légales</a></li>
+            <li><a href="./src/mention.html">Mentions légales</a></li>
         </ul>
         </div>
     </div>
