--- a/src/about.html
+++ b/src/about.html
@@ -91,7 +91,7 @@
                 <li><a href="#home" aria-label="Voir nos services">Nos services</a></li>
                 <li><a href="./services.html#tarif" aria-label="Voir les tarifs">Tarifs</a></li>
                 <li><a href="./about.html">À propos</a></li>
-                <li><a href="#">Mentions légales</a></li>
+                <li><a href="./mention.html">Mentions légales</a></li>
             </ul>
             </div>
         </div>
