--- a/src/services.html
+++ b/src/services.html
@@ -43,7 +43,7 @@
                 <p>Enregistrement, mixage, mastering : nous vous accompagnons à chaque étape de votre projet avec des services pro, adaptés à vos besoins. Qualité studio, tarifs clairs, rendu optimal.</p>
             </article>
 
-            <a href="#" class="studio-button">Réserver</a>
+            <a href="#contact" class="studio-button">Prendre contact</a>
         </section>
 
        
@@ -90,7 +90,7 @@
                         <p><span>110€</span> 1 heure + 1 mix</p>    
                         <p><span>140€</span> 2 heure + 1 mix</p>
                     </div>
-                    <a href="#contact">Réserver</a>
+                    <a href="#contact">Prendre contact</a>
                 </div>
 
                 <div class="prix-card">
